--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discordjs-v14-bot-template": "file:",
     "dotenv": "^16.4.7",
     "node-schedule": "^2.1.1",
-    "quick.db": "^9.1.7"
+    "quick.db": "^9.1.7",
+    "ws": "^8.x.x"
   }
 }
