--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "better-sqlite3": "^11.8.1",
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^6.0.3",
     "colors": "^1.4.0",
     "discord.js": "^14.17.0",
     "discordjs-v14-bot-template": "file:",
